--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1
 	text-align: center;
 	border: black double;
 	border-width: 10px;
-	border-radius: ;
+	border-radius :5px;
 	margin: 10px;
 	border-radius: 10px;
 }
