--- a/style.css
+++ b/style.css
@@ -9,17 +9,19 @@ body
 h1
 {
 	color: gray;
+	background-color: #ffffff;
 	font-size: 20;
 	text-align: center;
 	border: black double;
 	border-width: 10px;
 	border-radius :5px;
-	margin: 10px;
+	margin: 20px;
 	border-radius: 10px;
 }
 h2
 {
 	color: darkblue;
+	background-color: #ffffff;
 	text-align: left;
 	border-style: ridge;
 	border-inline-end-color: blueviolet;
