--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 
+* {
+	border: solid red;
+}
 body {
 	background-color: #ddf6ff;
 	margin: 0;
@@ -38,11 +41,12 @@ animation-timing-function: ease-in;
 .information {
 	padding: 30px;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
+	width: 100%;
+	justify-content: space-between;
 	justify-items: center;
 	gap: 20px;
 	position: relative;
+	align-items: center;
 	
 
 }
@@ -50,7 +54,7 @@ animation-timing-function: ease-in;
 .information-child {
 	padding: 30px;
 	display: flex;
-	flex-direction: row;
+	
 	justify-content: center;
 	align-items: center;
 	justify-items: center;
@@ -61,7 +65,7 @@ animation-timing-function: ease-in;
 {
 	padding: 30px;
 	display: flex;
-	flex-direction: row;
+	
 	justify-content: center;
 	align-items: center;
 	justify-items: center;
@@ -73,7 +77,7 @@ animation-timing-function: ease-in;
 .education {
 	padding: 30px;
 	display: flex;
-	flex-direction: row;
+	
 	justify-content: space-between;
 
 	padding: 10px;
@@ -85,7 +89,7 @@ align-items: center;
 .education-child {
 	padding: 30px;
 	display: flex;
-	flex-direction: row;
+	
 	justify-content: space-between;
 align-items: center;
 
@@ -99,7 +103,7 @@ align-items: center;
 .field {
 	padding: 30px;
 	display: flex;
-	flex-direction: row;
+	
 	justify-content: space-around;
 	line-height: 5px;
 
@@ -112,7 +116,7 @@ align-items: center;
 .fiel-child {
 	padding: 30px;
 	display: flex;
-	flex-direction: row;
+	
 	justify-content: space-between;
 	line-height: 10px;
 
@@ -124,7 +128,7 @@ align-items: center;
 .more information {
 	padding: 30px;
 	display: flex;
-	flex-direction: row;
+	
 	justify-content: space-between;
 	line-height: 5px;
 	padding-left: 40px;
@@ -136,7 +140,7 @@ align-items: center;
 .more-child {
 	padding: 30px;
 	display: flex;
-	flex-direction: row;
+
 	justify-content: space-between;
 	line-height: 5px;
 	padding-left: 40px;
@@ -148,7 +152,7 @@ align-items: center;
 .skills {
 	padding: 30px;
 	display: flex;
-	flex-direction: row;
+	
 	justify-content: space-between;
 	line-height: 5px;
 	padding-left: 40px;
@@ -161,12 +165,13 @@ align-items: center;
 .more-skills {
 	padding: 30px;
 	display: flex;
-	flex-direction: row;
+	
 	justify-content: space-between;
 	line-height: 5px;
 	padding-left: 40px;
 	padding: 10px;
 	justify-items: center;
+	gap: 20px;
 }
 
 
@@ -174,7 +179,8 @@ align-items: center;
 {
 	padding: 30px;
 	display: flex;
-	flex-direction: row;
+	
+	
 	justify-content: space-between;
 	line-height: 5px;
 	padding-left: 40px;
@@ -185,14 +191,14 @@ align-items: center;
 }
 
 .contact-child {
-	padding: 30px;
+	
 	display: flex;
-	flex-direction: row;
+	
 	justify-content: space-between;
 	line-height: 5px;
-	padding-left: 40px;
+
 	padding: 10px;
-	justify-items: center;
+	align-items: center;
 	flex-wrap: wrap;
 }
 button
@@ -247,6 +253,16 @@ position: absolute;
 bottom: 20px;
 right: 5px;	
 }
+
+.form
+{
+	width: 80%;
+}
+.select
+{
+	width: 80%;
+}
+
 
 @keyframes h1
 {
